// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders correctly 1`] = `
<section
  className="anotherClass1 anotherClass2"
  css={
    Object {
      "map": undefined,
      "name": "rp7nok",
      "next": undefined,
      "styles": "
        flex:0 1 50%;display:flex;@media (min-width: 480px){flex:0 1 100%;display:flex;}@media (min-width: 576px){flex:0 1 50%;display:flex;}@media (min-width: 768px){flex:0 0 30px;display:flex;}@media (min-width: 992px){flex:0 0 40px;display:flex;}@media (min-width: 1200px){flex:0;display:none;}justify-content:center;align-items:flex-end;margin:16px  8px;padding:32px  24px;
      ",
      "toString": [Function],
    }
  }
>
  <div>
    This is a children.
  </div>
</section>
`;

exports[`Box renders correctly with custom media queries 1`] = `
<section
  className="anotherClass1 anotherClass2"
  css={
    Object {
      "map": undefined,
      "name": "109qb2c",
      "next": undefined,
      "styles": "
        flex:0 1 50%;display:flex;@media (min-width: 10px){flex:0 1 100%;display:flex;}@media (min-width: 20px){flex:0 1 50%;display:flex;}@media (min-width: 30px){flex:0 0 30px;display:flex;}@media (min-width: 40px){flex:0 0 40px;display:flex;}@media (min-width: 50px){flex:0;display:none;}justify-content:center;align-items:flex-end;margin:16px  8px;padding:32px  24px;
      ",
      "toString": [Function],
    }
  }
>
  <div>
    This is a children.
  </div>
</section>
`;
